# orderly-sdk-py

./: .mise.toml  .pdoc.yml  README.md  generate_docs.sh  pdoc.conf  pyproject.toml
.github/: README.md
.github/pdoc_templates/: custom.css
.github/workflows/: docs.yml  publish.yml
docs/: orderly_sdk.html  search.js
src/orderly_sdk/: __init__.py  exceptions.py  helpers.py  log.py  rest.py  ws.py
